# modern-vulkan

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
lib/: CMakeLists.txt
lib/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp  imstb_textedit.h
lib/lua/: CMakeLists.txt  luaconf.h
lib/mikktspace/: mikktspace.c
projects/dungeon/: input.json
projects/dungeon/lua/: dungeon.lua
projects/dungeon/lua/include/: map.lua
projects/dungeon/rooms/: map1.txt  maplegend.txt
projects/rendershowcase/: input.json  scene.json
projects/rendershowcase/lua/: rendershowcase.lua
projects/snake/: input.json
projects/snake/lua/: snake.lua
resources/: CMakeLists.txt
resources/json/: game_input.json  standard_scene.json
resources/lua/: bbmath.lua  camera.lua  gamescene.lua
resources/scenes/: object_scene.json  standard_scene.json
resources/shaders/HLSL/: Debug.hlsl  DeferredFinal.hlsl  DeferredGeometry.hlsl  GaussianBlur.hlsl  Imgui.hlsl  Jitter.hlsl  ShadowMap.hlsl  Skybox.hlsl  common.hlsl  glyph.hlsl  lights.hlsl  line.hlsl  pbrmesh.hlsl  shared_common.hlsl.h  shared_defines.hlsl.h
src/: CMakeLists.txt  image_test_main.cpp  main.cpp
src/BB/: CMakeLists.txt
src/BB/Framework/: CMakeLists.txt
src/BB/Framework/include/: BBCompiler.h  BBEnum.hpp  BBGlobal.h  BBImage.hpp  BBIntrin.h  BBMain.h  BBMemory.h  BBPragma.h  BBThreadScheduler.hpp  BBjson.hpp  Common.h  Math.inl
src/BB/Framework/include/Allocators/: Allocators.h  BackingAllocator.h  MemoryArena.hpp  MemoryInterfaces.hpp  RingAllocator.h  TemporaryAllocator.h
src/BB/Framework/include/Math/: Collision.inl  Math.inl
src/BB/Framework/include/OS/: HID.h  HID.inl  Program.h
src/BB/Framework/include/Storage/: Array.h  BBString.h  FixedArray.h  FreelistArray.hpp  GrowPool.h  Hashmap.h  LinkedList.h  Pool.h  Queue.hpp  RawPool.hpp  Slotmap.h  SparseSet.hpp
src/BB/Framework/include/Utils/: Hash.h  Logger.h  Slice.h  Utils.h
src/BB/Framework/src/: BBImage.cpp  BBMain.cpp  BBThreadScheduler.cpp  BBjson.cpp  Common.cpp
src/BB/Framework/src/Allocators/: Allocators.cpp  BackingAllocator.cpp  MemoryArena.cpp  MemoryInterfaces.cpp  RingAllocator.cpp  TemporaryAllocator.cpp
src/BB/Framework/src/OS/: OSDevice_LINUX.cpp  Program_WIN.cpp
src/BB/Framework/src/Utils/: Logger.cpp  Utils.cpp
src/BB/Framework/src/storage/: BBString.cpp
src/BB/UnitTests/: CMakeLists.txt  Main.cpp  TestValues.h
src/BB/UnitTests/Framework/: Allocators_UTEST.h  Array_UTEST.h  BBjson_UTEST.hpp  FileReadWrite_UTEST.h  Hashmap_UTEST.h  MemoryArena_UTEST.h  MemoryOperations_UTEST.h  Pool_UTEST.h  Slotmap_UTEST.h  String_UTEST.h
src/Editor/: CMakeLists.txt  Camera.cpp  Camera.hpp  Console.cpp  Console.hpp  Editor.cpp  Editor.hpp  EditorGame.cpp  EditorGame.hpp  FreeCamera.cpp  FreeCamera.hpp  Gizmo.cpp  Gizmo.hpp  ProfilerWindow.cpp  ProfilerWindow.hpp  Viewport.cpp  Viewport.hpp  config.bbc  imgui.ini  main.cpp
src/Engine/: AssetLoader.cpp  AssetLoader.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  EngineConfig.cpp  EngineConfig.hpp  Enginefwd.hpp  GameInstance.cpp  GameInstance.hpp  Gizmo.cpp  Gizmo.hpp  ImGuiImpl.cpp  ImGuiImpl.hpp  InputSystem.cpp  InputSystem.hpp  MaterialSystem.cpp  MaterialSystem.hpp  Profiler.cpp  Profiler.hpp  SceneHierarchy.cpp  SceneHierarchy.hpp  Transform.cpp  Transform.h  Transform.hpp  UICanvas.cpp  UICanvas.hpp  Viewport.cpp  ViewportInterface.hpp  imgui_impl_bb.cpp  imgui_impl_bb.hpp
src/Engine/ecs/: ECSBase.hpp  EntityComponentSystem.cpp  EntityComponentSystem.hpp  EntityMap.cpp  EntityMap.hpp  HierarchySystem.cpp  HierarchySystem.hpp  LightComponent.cpp  LightComponent.hpp  NameComponent.hpp  RenderComponent.cpp  RenderComponent.hpp  RenderMesh.cpp  RenderMesh.hpp  Transform.cpp  Transform.hpp  TransformComponent.cpp  TransformComponent.hpp  TransformSystem.cpp  TransformSystem.hpp
src/Engine/ecs/components/: LightComponent.cpp  LightComponent.hpp  NameComponent.cpp  NameComponent.hpp  RaytraceComponent.cpp  RaytraceComponent.hpp  RelationComponent.hpp  RenderComponent.cpp  RenderComponent.hpp  TransformComponent.cpp  TransformComponent.hpp  TransformComponents.hpp
src/Engine/ecs/systems/: BloomStage.cpp  BloomStage.hpp  ClearStage.cpp  ClearStage.hpp  LineStage.cpp  LineStage.hpp  RasterMeshStage.cpp  RasterMeshStage.hpp  RenderGraph.cpp  RenderOptions.hpp  RenderStages.cpp  RenderStages.hpp  RenderStagesfwd.hpp  RenderSystem.cpp  RenderSystem.hpp  RenderSystem2D.cpp  RenderSystem2D.hpp  Rendergraph.hpp  ShadowMapStage.cpp  ShadowMapStage.hpp
src/Engine/lua/: LuaECSApi.hpp  LuaEcsApi.cpp  LuaEcsApi.inl  LuaEngine.cpp  LuaEngine.hpp  LuaTest.cpp  LuaTest.hpp  LuaTypes.cpp  LuaTypes.hpp
src/Game/: CMakeLists.txt  Camera.cpp  Camera.hpp  DungeonGameLib.cpp  DungeonGameLib.hpp  GameInterface.cpp  GameInterface.hpp  GameMain.cpp  GameMain.hpp  JsonLoading.cpp  JsonLoading.hpp  LuaExample.cpp  LuaExample.hpp  RenderViewport.cpp  RenderViewport.hpp
src/Render/: CMakeLists.txt  GPUBuffers.cpp  GPUBuffers.hpp  GPUTextureManager.hpp  Renderer.cpp  Renderer.hpp  RendererTypes.hpp  Rendererfwd.hpp  ShaderCompiler.cpp  ShaderCompiler.h  imgui_impl_bb.cpp  imgui_impl_bb.hpp
src/Render/Backend/: BackendRenderer.cpp  BackendRenderer.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
src/Render/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.hpp
src/resources/: CMakeLists.txt
